# army_levees

./: .coverage  .coverage.shoutouhtermain.lan.31647.XPVdLfRx  .flake8  .gitignore  .pre-commit-config.yaml  .thoughts  Comparative Analysis of Levee Elevation Data.docx  README.md  Wabash_northofclifton.txt  artificiallevees2.pptx  aulkwe.geojson  contains_0.txt  cuhhmz.geojson  hyder.geojson  hyderzoomed.geojson  indiana_system_ids.json  invalid_system_ids.txt  large_offset.txt  mean_differences.csv  nld_rest_api.qgz  plot_levees.py  pyproject.toml  requirements.txt  rockcreek.geojson  runner.sh  system_ids.json  usace_system_ids.json  valid_system_ids.txt  vertcon_88-29.tif  ~$artificiallevees.pptx
.history/: get_3dep_20240106132146.py  get_3dep_20240117094039.py  plot_levees_20240106131249.py  plot_levees_20240117110331.py  plot_levees_20240117110332.py
Comparative Analysis of Levee Elevation Data/: Backup of Comparative Analysis of Levee Elevation Data.docx
IN_levees_full_geojson/: Borehole.geojson  Centerline.geojson  ClosureStructure.geojson  Floodwall.geojson  GravityDrain.geojson  LeveeCrossing.geojson  LeveeStation.geojson  Piezometer.geojson  Pipe.geojson  PipeGate.geojson  PumpStation.geojson  ReliefWell.geojson  System.geojson  Toedrain.geojson
army_levees/: analyze.py  clustering_analysis.py  inundation_timeseries.py  invalid_system_ids.txt  nld_api.py  nld_api_test4exampleSystem.py  nld_tep_diff_plotting.py  nld_tep_diff_plotting_wkmean.py  nld_tep_filtered_diff_plotting.py  per_state_system_ids  plot_example4pre.py  plot_example4pre_noWall.py  plot_levees.py  plot_modular copy.py  plot_modular copy_yl.py  plot_modular.py  plot_modular_yl.py  scratch.py  updated_nld_tep_plotting copy.py  updated_nld_tep_plotting.py  updated_nld_tep_plotting_yl.py  usace_system_ids.json  utils.py  valid_system_ids.txt  walkerdepoero.py
army_levees_noWall/: correlation_test.py  find_poorCorr_test.py  norm_optimal_test.py  optimal_shift_test.py  plot_example_noWall.py  plot_example_withoutProcess.py  plt_profiles.py  shift_test.py
data/: 3DEP_1505000005.geojson  NLD_profile_1505000005.geojson
docs/: ERDC_update.docx
investigation/: elevation_clusters_map.html  (+10 more)
(+399 files in other folders)
