[tool.poetry]
name = "army-levees"
version = "0.1.0"
description = ""
authors = ["Jake Gearon <jake.gearon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
geopandas = "^0.14.1"
shapely = "^2.0.2"
duckdb = "^0.9.2"
pandas = "^2.1.3"
numpy = "^1.26.2"
py3dep = "^0.15.2"
pynhd = "^0.15.2"
matplotlib = "^3.8.2"
boto3 = "^1.33.2"
seaborn = "^0.13.0"
cartopy = "^0.22.0"
ccrs = "^1.0.0"
matplotlib-scalebar = "^0.8.1"
scikit-learn = "^1.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
