[tool.poetry]
name = "army-levees"
version = "0.1.0"
description = ""
authors = ["Jake Gearon <jake.gearon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
pandas = "^2.1.4"
geopandas = "^0.14.2"
shapely = "^2.0.2"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
contextily = "^1.4.0"
duckdb = "^0.9.2"
boto3 = "^1.33.2"
dash = "^2.18.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
